--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "history": "^4.7.2",
     "parcel-bundler": "^1.10.3",
     "pubnub": "^4.21.6",
-    "react": "^16.6.0",
+    "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.6.0",
     "react-router-dom": "^4.3.1",
     "redis": "^2.8.0",
